src/core/index.css
:root {
  --background: 0 0% 100%;
  --foreground: 222.2 84% 4.9%;
  --card: 0 0% 100%;
  --card-foreground: 222.2 84% 4.9%;
  --popover: 0 0% 100%;
  --popover-foreground: 222.2 84% 4.9%;
  --primary: 222.2 47.4% 11.2%;
  --primary-foreground: 210 40% 98%;
  --secondary: 210 40% 96.1%;
  --secondary-foreground: 222.2 47.4% 11.2%;
  --muted: 210 40% 96.1%;
  --muted-foreground: 215.4 16.3% 46.9%;
  --accent: 210 40% 96.1%;
  --accent-foreground: 222.2 47.4% 11.2%;
  --destructive: 0 84.2% 60.2%;
  --destructive-foreground: 210 40% 98%;
  --border: 214.3 31.8% 91.4%;
  --input: 214.3 31.8% 91.4%;
  --ring: 222.2 84% 4.9%;
  --radius: 0.5rem;
  --chart-1: 12 76% 61%;
  --chart-2: 173 58% 39%;
  --chart-3: 197 37% 24%;
  --chart-4: 43 74% 66%;
  --chart-5: 27 87% 67%;
}

.dark {
  --background: 222.2 84% 4.9%;
  --foreground: 210 40% 98%;
  --card: 222.2 84% 4.9%;
  --card-foreground: 210 40% 98%;
  --popover: 222.2 84% 4.9%;
  --popover-foreground: 210 40% 98%;
  --primary: 210 40% 98%;
  --primary-foreground: 222.2 47.4% 11.2%;
  --secondary: 217.2 32.6% 17.5%;
  --secondary-foreground: 210 40% 98%;
  --muted: 217.2 32.6% 17.5%;
  --muted-foreground: 215 20.2% 65.1%;
  --accent: 217.2 32.6% 17.5%;
  --accent-foreground: 210 40% 98%;
  --destructive: 0 62.8% 30.6%;
  --destructive-foreground: 210 40% 98%;
  --border: 217.2 32.6% 17.5%;
  --input: 217.2 32.6% 17.5%;
  --ring: 212.7 26.8% 83.9;
  --chart-1: 220 70% 50%;
  --chart-2: 160 60% 45%;
  --chart-3: 30 80% 55%;
  --chart-4: 280 65% 60%;
  --chart-5: 340 75% 55%;
}

.no-scrollbar{
  -ms-overflow-style: none !important;  /* Internet Explorer 10+ */
  scrollbar-width: none !important;  /* Firefox */
}

.no-scrollbar::-webkit-scrollbar {
  display: none !important;  /* Safari and Chrome */
}


.rjsf input[type="color"] {
  @apply p-0 w-14 -mt-1 border-none !important;
}

.rjsf {
  @apply px-0;
}

.rjsf .form-group {
  @apply flex flex-col;
}

.rjsf .form-group label {
  @apply text-xs font-normal text-muted-foreground;
}
.rjsf .form-group select {
  @apply flex mt-1 w-full rounded-md border border-border bg-background px-3 py-1 text-sm shadow-sm transition-colors file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50;
}
.rjsf .form-group input {
  @apply flex mt-1 w-full rounded-md border border-border bg-background px-3 py-1 text-sm shadow-sm transition-colors file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50;
}
.rjsf .form-group > textarea {
  @apply no-scrollbar flex mt-1 w-full rounded-md border border-border bg-background px-3 py-1 text-sm shadow-sm transition-colors file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50;
}
.rjsf > div > button[type="submit"] {
  @apply hidden;
}

.rjsf > .form-group > fieldset > * {
  @apply border-none border-border pb-1 pt-1 mb-2;
}

.rjsf .form-group > .checkbox > label > span {
  @apply mt-1;
}

.rjsf .form-group > .checkbox > label {
  @apply flex items-center gap-x-2;
}

.array-item-list .array-item {
  @apply rounded p-2 relative;
}

[type='text']:focus, input:where(:not([type])):focus, [type='email']:focus, [type='url']:focus, [type='password']:focus, [type='number']:focus, [type='date']:focus, [type='datetime-local']:focus, [type='month']:focus, [type='search']:focus, [type='tel']:focus, [type='time']:focus, [type='week']:focus, [multiple]:focus, textarea:focus, select:focus{
  @apply outline-none ring-1 ring-transparent border-border !important;
}

/* ------------------------ Props Editor ------------------------ */

.array-item-list > :not([hidden]) ~ :not([hidden]) {
  --tw-space-y-reverse: 0;
  margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
  margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
}

.array-item-toolbox > .btn-group {
  position: absolute;
  bottom: -1rem;
  left: -1px;
  z-index: 50;
  height: 1.75rem;
  width: -moz-max-content;
  width: max-content;
}

.array-item-toolbox > .btn-group > :not([hidden]) ~ :not([hidden]) {
  --tw-divide-x-reverse: 0;
  border-right-width: calc(1px * var(--tw-divide-x-reverse));
  border-left-width: calc(1px * calc(1 - var(--tw-divide-x-reverse)));
  --tw-divide-opacity: 1;
  border-color: rgb(209 213 219 / var(--tw-divide-opacity));
}

.array-item-toolbox > .btn-group {
  border-radius: 0.25rem;
  border-width: 1px;
  --tw-border-opacity: 1;
  border-color: rgb(209 213 219 / var(--tw-border-opacity));
  --tw-bg-opacity: 1;
  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
  font-family:
    ui-serif,
    Georgia,
    Cambria,
    Times New Roman,
    Times,
    serif;
}

.array-item-toolbox > .btn-group > .btn {
  display: flex;
  height: 1.75rem;
  width: 2rem;
  cursor: pointer;
  align-items: center;
  justify-content: center;
  font-size: 0.75rem;
  line-height: 1rem;
}

.array-item-toolbox > .btn-group > .btn:hover {
  --tw-scale-x: 0.9;
  --tw-scale-y: 0.9;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x))
    skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

.btn.btn-danger.array-item-remove:before {
  font-size: 0.875rem;
  line-height: 1.25rem;
  --tw-text-opacity: 1;
  color: rgb(239 68 68 / var(--tw-text-opacity));
  --tw-content: "✖";
  content: var(--tw-content);
}

.btn.btn-default.array-item-move-up:before {
  --tw-rotate: 90deg;
  --tw-text-opacity: 1;
  --tw-content: "⬅";
}

.btn.btn-default.array-item-move-down:before,
.btn.btn-default.array-item-move-up:before {
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x))
    skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
  color: rgb(17 24 39 / var(--tw-text-opacity));
  content: var(--tw-content);
}

.btn.btn-default.array-item-move-down:before {
  --tw-rotate: -90deg;
  --tw-text-opacity: 1;
  --tw-content: "⬅";
}

.array-item-add {
  position: relative;
  max-height: 1.75rem;
  background-color: transparent;
  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
}

.array-item-add,
.btn.btn-info.btn-add:before {
  overflow: hidden;
  --tw-bg-opacity: 1;
  -webkit-mask-image: -webkit-radial-gradient(#fff, #000);
}

.btn.btn-info.btn-add:before {
  position: absolute;
  right: 0;
  top: 0;
  display: flex;
  height: 1.75rem;
  width: 3.5rem;
  align-items: center;
  justify-content: center;
  border-radius: calc(var(--radius) - 2px);
  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 900;
  --tw-content: "＋";
  content: var(--tw-content);
}

.btn.btn-info.btn-add:hover:before {
  --tw-bg-opacity: 1;
  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
}

